feat: Add simple button

--- a/nx.json
+++ b/nx.json
@@ -27,8 +27,11 @@
     ]
   },
   "projects": {
-    "mibao-ui-docs": {
+    "mibao-ui": {
       "tags": []
+    },
+    "mibao-ui-docs": {
+      "tags": ["mibao-ui"]
     },
     "mibao-ui-docs-e2e": {
       "tags": [],
