--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   },
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.6.9",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "core-js": "^3.6.5",
+    "framer-motion": "^4.1.17",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "regenerator-runtime": "0.13.7",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@nrwl/cli": "12.9.0",
@@ -45,6 +50,7 @@
     "jest": "27.0.3",
     "prettier": "^2.3.1",
     "ts-jest": "27.0.3",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "@types/lodash": "^4.14.175"
   }
 }
