--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "private": true,
   "dependencies": {
-    "classnames": "^2.3.1",
+    "@chakra-ui/react": "^1.6.9",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "core-js": "^3.6.5",
     "framer-motion": "^4.1.17",
-    "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "regenerator-runtime": "0.13.7",
@@ -38,7 +39,6 @@
     "@testing-library/react": "11.2.6",
     "@testing-library/react-hooks": "7.0.1",
     "@types/jest": "26.0.24",
-    "@types/lodash": "^4.14.175",
     "@types/node": "14.14.33",
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.3",
