--- a/apps/mibao-ui-docs/tsconfig.json
+++ b/apps/mibao-ui-docs/tsconfig.json
@@ -8,7 +8,8 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "lib": ["dom", "es6", "ES2019.Array"]
   },
   "files": [],
   "include": [],
