--- a/libs/mibao-ui/.eslintrc.json
+++ b/libs/mibao-ui/.eslintrc.json
@@ -22,7 +22,8 @@
         "semi": ["error", "never"],
         "import/extensions": 0,
         "@typescript-eslint/consistent-type-assertions": 0,
-        "@typescript-eslint/explicit-function-return-type": 0
+        "@typescript-eslint/explicit-function-return-type": 0,
+        "@typescript-eslint/strict-boolean-expressions": 0
       }
     },
     {
