--- a/apps/mibao-ui-docs/tsconfig.app.json
+++ b/apps/mibao-ui-docs/tsconfig.app.json
@@ -2,7 +2,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "types": ["node"]
+    "types": ["node"],
+    "paths": {
+      "@emotion/core": ["./emotion-core-stub.ts"]
+    }
   },
   "files": [
     "../../node_modules/@nrwl/react/typings/cssmodule.d.ts",
