--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "1.0.16",
     "@chakra-ui/react": "1.6.10",
     "@emotion/react": "11.4.1",
     "@emotion/styled": "11.3.0",
