--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
     "@nrwl/tao": "12.9.0",
     "@nrwl/web": "12.9.0",
     "@nrwl/workspace": "12.9.0",
+    "@rollup/plugin-url": "^6.1.0",
     "@storybook/addon-a11y": "6.3.12",
     "@storybook/addon-docs": "6.3.12",
     "@storybook/addon-essentials": "6.3.12",
     "@storybook/react": "6.3.12",
+    "@svgr/rollup": "^5.5.0",
     "@svgr/webpack": "5.5.0",
     "@testing-library/react": "11.2.7",
     "@testing-library/react-hooks": "7.0.2",
