--- a/libs/mibao-ui/tsconfig.json
+++ b/libs/mibao-ui/tsconfig.json
@@ -8,7 +8,10 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "typeRoots": [
+      "src/types",
+    ]
   },
   "files": [],
   "include": [],
