--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
     "@chakra-ui/react": "1.6.10",
     "@emotion/react": "11.4.1",
     "@emotion/styled": "11.3.0",
+    "@google/model-viewer": "^1.9.2",
     "core-js": "3.18.3",
     "framer-motion": "4.1.17",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-zoom-pan-pinch": "^2.1.3",
     "regenerator-runtime": "0.13.9",
-    "rxjs": "^7.4.0",
-    "rxjs-hooks": "^0.7.0",
     "tslib": "2.3.1"
   },
   "browserslist": {
