--- a/apps/mibao-ui-docs/.storybook/tsconfig.json
+++ b/apps/mibao-ui-docs/.storybook/tsconfig.json
@@ -7,7 +7,8 @@
   "files": [
     "../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts",
     "../../../node_modules/@nrwl/react/typings/cssmodule.d.ts",
-    "../../../node_modules/@nrwl/react/typings/image.d.ts"
+    "../../../node_modules/@nrwl/react/typings/image.d.ts",
+    "../../../libs/mibao-ui/src/types/index.d.ts"
   ],
   "exclude": [
     "../**/*.spec.ts",
