feat: move model-viewer to outside

--- a/libs/mibao-ui/tsconfig.json
+++ b/libs/mibao-ui/tsconfig.json
@@ -8,10 +8,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "typeRoots": [
-      "src/types",
-    ]
+    "noFallthroughCasesInSwitch": true
   },
   "files": [],
   "include": [],
