--- a/apps/mibao-ui-docs/.storybook/tsconfig.json
+++ b/apps/mibao-ui-docs/.storybook/tsconfig.json
@@ -2,13 +2,16 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "emitDecoratorMetadata": true,
-    "outDir": ""
+    "outDir": "",
+    "typeRoots": [
+      "src/types",
+    ]
   },
   "files": [
     "../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts",
     "../../../node_modules/@nrwl/react/typings/cssmodule.d.ts",
     "../../../node_modules/@nrwl/react/typings/image.d.ts",
-    "../../../libs/mibao-ui/src/types/index.d.ts"
+    "../src/types/index.d.ts"
   ],
   "exclude": [
     "../**/*.spec.ts",
