--- a/apps/mibao-ui-docs/tsconfig.json
+++ b/apps/mibao-ui-docs/tsconfig.json
@@ -9,7 +9,10 @@
     "strict": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "lib": ["dom", "es6", "ES2019.Array"]
+    "lib": ["dom", "es6", "ES2019.Array"],
+    "typeRoots": [
+      "src/types",
+    ]
   },
   "files": [],
   "include": [],
