--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-dom": "17.0.2",
     "react-zoom-pan-pinch": "^2.1.3",
     "regenerator-runtime": "0.13.9",
+    "rxjs": "^7.4.0",
+    "rxjs-hooks": "^0.7.0",
     "tslib": "2.3.1"
   },
   "browserslist": {
